samples/_failures_safe/1761523800_9ddcdf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7de5f0c1.c: In function ‘main’:
./samples/SAFE/__tmp_7de5f0c1.c:184:24: error: missing terminating " character
  184 |                 printf("Buffer full!\
      |                        ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_7de5f0c1.c:184:17: error: expected expression at end of input
  184 |                 printf("Buffer full!\
      |                 ^~~~~~
./samples/SAFE/__tmp_7de5f0c1.c:184:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7de5f0c1.c:184:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7de5f0c1.c:184:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7de5f0c1.c:184:17: error: expected declaration or statement at end of input
